# bb

./: .gitignore  Cargo.toml  README  README.md  bb.1  build.rs  rustfmt.toml
src/: components.rs  lib.rs  main.rs  state.rs  terminal.rs  text_processing.rs  thread.rs  types.rs  ui.rs
src/components/: kernel.rs  processes.rs  utilities.rs
src/terminal/: cells.rs  keys.rs  position.rs
src/text_processing/: grapheme_clusters.rs  line_break.rs  tables.rs  types.rs  wcwidth.rs
src/ui/: components.rs  state.rs  terminal.rs  text_processing.rs  types.rs
src/ui/components/: kernel.rs  processes.rs  utilities.rs
src/ui/components/utilities/: widgets.rs
src/ui/terminal/: cells.rs  keys.rs  position.rs
src/ui/text_processing/: grapheme_clusters.rs  line_break.rs  tables.rs  types.rs  wcwidth.rs
