[package]
name = "bb"
version = "0.4.1"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
license = "GPL-3.0-or-later"
readme = "README.md"
description = "clean simple fast process viewer"
homepage = "https://nessuent.xyz/bb.html"
repository = "https://github.com/epilys/bb.git"
categories = ["command-line-utilities", ]
keywords = ["process", "processes", "top", "ps"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
crossbeam = "0.7.2"
signal-hook = "0.1.12"
signal-hook-registry = "1.2.0"
termion = "1.5.3"
libc = "0.2.62"
unicode-segmentation = "1.2.1"
nix = "0.16.1"
cassowary = "^0.3.0"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
