[package]
name = "bb"
version = "0.4.4"
authors = ["Manos Pitsidianakis <manos@pitsidianak.is>"]
license = "GPL-3.0-or-later"
readme = "README.md"
description = "clean simple fast process viewer"
homepage = "https://nessuent.net/bb.html"
repository = "https://github.com/epilys/bb.git"
categories = ["command-line-utilities", ]
keywords = ["process", "processes", "top", "ps"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
cassowary = "^0.3.0"
crossbeam = "0.8.4"
libc = "0.2.62"
nix = "0.20.2"
signal-hook = "0.1.12"
signal-hook-registry = "1.2.0"
termion = "1.5.3"
unicode-segmentation = "1.2.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
